--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,4 +1,5 @@
 brew "autojump"
+brew "rmtree"
 brew "git"
 brew "git-lfs"
 brew "dpkg"
@@ -7,13 +8,11 @@ brew "jq"
 brew "nano"
 brew "python@2"
 brew "python"
-brew "ruby"
 brew "telnet"
 brew "tldr"
 brew "tree"
 brew "wget"
 brew "xz"
-cask "android-platform-tools"
 cask "atom"
 cask "displaycal"
 cask "docker"
@@ -28,6 +27,7 @@ cask "iterm2"
 cask "keepassxc"
 cask "keka"
 cask "kitematic"
+cask "little-snitch"
 cask "microsoft-office"
 cask "microsoft-remote-desktop-beta"
 cask "ngrok"
@@ -35,6 +35,7 @@ cask "numi"
 cask "postman"
 cask "sequel-pro"
 cask "slack"
+cask "spotify"
 cask "sublime-text"
 cask "synergy"
 cask "visual-studio-code"
