--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,4 +1,5 @@
 brew "autojump"
+brew "ccat"
 brew "rmtree"
 brew "git"
 brew "git-lfs"
@@ -7,7 +8,8 @@ brew "hadolint"
 brew "jq"
 brew "nano"
 brew "python@2"
-brew "python"
+brew "python@3"
+brew "ossp-uuid"
 brew "telnet"
 brew "tldr"
 brew "tree"
@@ -19,6 +21,7 @@ cask "docker"
 cask "dropbox"
 cask "etcher"
 cask "firefox"
+cask "ffmpeg"
 cask "font-hack-nerd-font"
 cask "google-chrome"
 cask "iina"
@@ -33,6 +36,7 @@ cask "microsoft-remote-desktop-beta"
 cask "ngrok"
 cask "numi"
 cask "postman"
+cask "qbittorrent"
 cask "sequel-pro"
 cask "slack"
 cask "spotify"
