--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,33 +1,54 @@
+tap "beeftornado/rmtree"
+tap "buo/cask-upgrade"
+tap "homebrew/bundle"
+tap "homebrew/cask"
+tap "homebrew/cask-fonts"
+tap "homebrew/cask-versions"
+tap "homebrew/core"
+tap "homebrew/services"
+cask "osxfuse"
+brew "argyll-cms"
 brew "autojump"
+brew "bash"
 brew "ccat"
-brew "rmtree"
+brew "dpkg"
+brew "ffmpeg"
+brew "gdbm"
 brew "git"
 brew "git-lfs"
-brew "dpkg"
 brew "hadolint"
+brew "htop"
+brew "ical-buddy"
 brew "jq"
-brew "nano"
-brew "python@2"
-brew "python@3"
+brew "newt"
+brew "node"
 brew "ossp-uuid"
-brew "telnet"
+brew "python"
+brew "python@2"
+brew "shellcheck"
+brew "sshfs"
 brew "tldr"
 brew "tree"
-brew "wget"
 brew "vim"
-brew "xz"
+brew "watch"
+brew "wget"
+brew "zsh"
+brew "beeftornado/rmtree/brew-rmtree"
+cask "adobe-creative-cloud"
 cask "atom"
+cask "cd-to-iterm"
 cask "displaycal"
 cask "docker"
 cask "dropbox"
 cask "etcher"
 cask "firefox"
-cask "ffmpeg"
 cask "font-hack-nerd-font"
 cask "google-chrome"
 cask "iina"
 cask "imageoptim"
 cask "iterm2"
+cask "java"
+cask "jdownloader"
 cask "keepassxc"
 cask "keka"
 cask "kitematic"
@@ -37,11 +58,14 @@ cask "microsoft-remote-desktop-beta"
 cask "ngrok"
 cask "numi"
 cask "postman"
+cask "prusa-slic3r"
+cask "pycharm-ce"
 cask "qbittorrent"
 cask "sequel-pro"
 cask "slack"
+cask "sonoair"
+cask "sourcetree"
 cask "spotify"
 cask "sublime-text"
 cask "synergy"
-cask "visual-studio-code"
 cask "vnc-viewer"
