--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -20,10 +20,12 @@ brew "hadolint"
 brew "htop"
 brew "ical-buddy"
 brew "jq"
+brew "python"
+brew "mackup"
+brew "nano"
 brew "newt"
 brew "node"
 brew "ossp-uuid"
-brew "python"
 brew "python@2"
 brew "shellcheck"
 brew "sshfs"
@@ -37,6 +39,7 @@ brew "beeftornado/rmtree/brew-rmtree"
 cask "adobe-creative-cloud"
 cask "atom"
 cask "cd-to-iterm"
+cask "cheatsheet"
 cask "displaycal"
 cask "docker"
 cask "dropbox"
