--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -11,11 +11,15 @@ brew "argyll-cms"
 brew "autojump"
 brew "bash"
 brew "ccat"
+brew "coreutils"
+brew "curl"
 brew "dpkg"
 brew "ffmpeg"
 brew "gdbm"
 brew "git"
 brew "git-lfs"
+brew "gptfdisk"
+brew "grep"
 brew "hadolint"
 brew "htop"
 brew "ical-buddy"
@@ -29,11 +33,14 @@ brew "ossp-uuid"
 brew "python@2"
 brew "shellcheck"
 brew "sshfs"
+brew "telnet"
+brew "tig"
 brew "tldr"
 brew "tree"
 brew "vim"
 brew "watch"
 brew "wget"
+brew "youtube-dl"
 brew "zsh"
 brew "beeftornado/rmtree/brew-rmtree"
 cask "adobe-creative-cloud"
@@ -49,6 +56,7 @@ cask "font-hack-nerd-font"
 cask "google-chrome"
 cask "iina"
 cask "imageoptim"
+cask "impactor"
 cask "iterm2"
 cask "java"
 cask "jdownloader"
@@ -65,10 +73,10 @@ cask "prusa-slic3r"
 cask "pycharm-ce"
 cask "qbittorrent"
 cask "sequel-pro"
+cask "skype-for-business"
 cask "slack"
 cask "sonoair"
 cask "sourcetree"
-cask "spotify"
 cask "sublime-text"
 cask "synergy"
 cask "vnc-viewer"
