--- a/pip/requirements.txt
+++ b/pip/requirements.txt
@@ -7,6 +7,7 @@ aws-sam-translator==1.9.1
 awscli==1.16.60
 backports.functools-lru-cache==1.5
 backports.ssl-match-hostname==3.5.0.1
+bcrypt==3.1.6
 binaryornot==0.4.4
 blessings==1.7
 boto3==1.9.62
@@ -27,7 +28,7 @@ docker-py==1.10.6
 docker-pycreds==0.3.0
 docutils==0.14
 enum34==1.1.6
-Fabric==1.14.0
+Fabric==1.14.1
 formic2==1.0.3
 functools32==3.2.3.post2
 future==0.17.1
@@ -37,6 +38,7 @@ GitPython==2.1.11
 GoDaddyPy==2.2.6
 idna==2.6
 inquirer==2.5.1
+invoke==1.2.0
 ipaddress==1.0.22
 isort==4.3.4
 jedi==0.13.1
@@ -49,7 +51,7 @@ jsonschema==2.6.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
-paramiko==2.1.2
+paramiko==2.4.2
 parso==0.3.1
 pathlib2==2.3.3
 pluggy==0.8.0
@@ -60,6 +62,7 @@ pycparser==2.19
 pydocstyle==3.0.0
 pyflakes==2.1.0
 pylint==1.9.3
+PyNaCl==1.3.0
 python-dateutil==2.7.5
 python-jsonrpc-server==0.0.2
 PyYAML==3.12
