--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -70,6 +70,7 @@ cask "microsoft-office"
 cask "microsoft-remote-desktop-beta"
 cask "ngrok"
 cask "numi"
+cask "parsec"
 cask "postman"
 cask "prusa-slic3r"
 cask "pycharm-ce"
@@ -79,6 +80,7 @@ cask "skype-for-business"
 cask "slack"
 cask "sonoair"
 cask "sourcetree"
+cask "steam"
 cask "sublime-text"
 cask "synergy"
 cask "vnc-viewer"
