--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -30,6 +30,7 @@ brew "mysql-client"
 brew "nano"
 brew "newt"
 brew "node"
+brew "openssh"
 brew "ossp-uuid"
 brew "pandoc"
 brew "python@2"
@@ -46,6 +47,7 @@ brew "youtube-dl"
 brew "zsh"
 brew "beeftornado/rmtree/brew-rmtree"
 cask "adobe-creative-cloud"
+cask "android-platform-tools"
 cask "atom"
 cask "cd-to-iterm"
 cask "cheatsheet"
@@ -84,3 +86,4 @@ cask "steam"
 cask "sublime-text"
 cask "synergy"
 cask "vnc-viewer"
+cask "xquartz"
