--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -55,7 +55,7 @@ cask "cheatsheet"
 cask "displaycal"
 cask "docker"
 cask "dropbox"
-cask "etcher"
+cask "balenaetcher"
 cask "firefox"
 cask "font-hack-nerd-font"
 cask "google-chrome"
@@ -69,7 +69,6 @@ cask "keepassxc"
 cask "keka"
 cask "kitematic"
 cask "little-snitch"
-cask "microsoft-office"
 cask "microsoft-remote-desktop-beta"
 cask "ngrok"
 cask "numi"
