add colorschemes via ssh

--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "vim/bundle/ctrlp.vim"]
 	path = vim/bundle/ctrlp.vim
 	url = https://github.com/ctrlpvim/ctrlp.vim.git
+[submodule "vim/bundle/vim-colorscheme"]
+	path = vim/bundle/vim-colorscheme
+	url = git@github.com:flazz/vim-colorschemes.git
