--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,5 +1,6 @@
 tap "beeftornado/rmtree"
 tap "buo/cask-upgrade"
+tap "clintmod/formulas"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-fonts"
@@ -7,10 +8,13 @@ tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
 cask "osxfuse"
+brew "ansible-cmdb"
 brew "argyll-cms"
 brew "autojump"
 brew "awk"
+brew "aws-iam-authenticator"
 brew "bash"
+brew "bfg"
 brew "gdbm"
 brew "python"
 brew "ccat"
@@ -21,24 +25,30 @@ brew "ffmpeg"
 brew "git"
 brew "git-lfs"
 brew "gnu-sed"
+brew "go"
 brew "gptfdisk"
 brew "grep"
 brew "hadolint"
 brew "htop"
 brew "ical-buddy"
 brew "jq"
+brew "kubernetes-cli"
 brew "mackup"
 brew "mysql-client"
 brew "nano"
 brew "newt"
 brew "node"
+brew "nvm"
 brew "openssh"
 brew "ossp-uuid"
+brew "packer"
 brew "pandoc"
 brew "python@2"
+brew "rack"
 brew "shellcheck"
 brew "sshfs"
 brew "telnet"
+brew "terraform"
 brew "tig"
 brew "tldr"
 brew "tree"
@@ -48,6 +58,7 @@ brew "wget"
 brew "youtube-dl"
 brew "zsh"
 brew "beeftornado/rmtree/brew-rmtree"
+brew "clintmod/formulas/macprefs"
 cask "adobe-creative-cloud"
 cask "android-platform-tools"
 cask "atom"
@@ -58,20 +69,25 @@ cask "cryptomator"
 cask "displaycal"
 cask "docker"
 cask "dropbox"
+cask "eloston-chromium"
 cask "firefox"
 cask "font-hack-nerd-font"
 cask "google-chrome"
+cask "google-cloud-sdk"
 cask "iina"
 cask "imageoptim"
 cask "impactor"
+cask "iridium"
 cask "iterm2"
 cask "java"
 cask "jdownloader"
+cask "joplin"
 cask "keepassxc"
 cask "keka"
 cask "kitematic"
 cask "little-snitch"
 cask "microsoft-remote-desktop-beta"
+cask "mongodb-compass-community"
 cask "ngrok"
 cask "numi"
 cask "postman"
@@ -83,5 +99,6 @@ cask "slack"
 cask "sourcetree"
 cask "sublime-text"
 cask "synergy"
+cask "thunderbird"
 cask "vnc-viewer"
 cask "xquartz"
