--- a/pip/requirements.txt
+++ b/pip/requirements.txt
@@ -10,6 +10,7 @@ autopep8==1.4.3
 awacs==0.8.1
 aws-sam-translator==1.9.1
 awscli==1.16.60
+Babel==2.6.0
 backports.functools-lru-cache==1.5
 backports.ssl-match-hostname==3.5.0.1
 bcrypt==3.1.6
@@ -30,10 +31,12 @@ colorama==0.3.9
 configparser==3.5.0
 cookiecutter==1.6.0
 cryptography==2.4.2
+debtcollector==1.21.0
 decorator==4.3.0
 docker-py==1.10.6
 docker-pycreds==0.3.0
 docutils==0.14
+entrypoints==0.3
 enum34==1.1.6
 Fabric==1.14.1
 fasteners==0.14.1
@@ -49,27 +52,43 @@ GitPython==2.1.11
 idna==2.6
 inquirer==2.5.1
 invoke==1.2.0
+ip-associations-python-novaclient-ext==0.2
 ipaddress==1.0.22
+iso8601==0.1.12
 isort==4.3.4
-jedi==0.13.1
+jedi==0.13.3
 Jinja2==2.10
 jinja2-time==0.2.0
 jmespath==0.9.3
 jsonpatch==1.23
 jsonpointer==2.0
 jsonschema==2.6.0
+keyring==18.0.1
+keystoneauth1==3.14.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
 mitogen==0.2.6
+mock==3.0.5
 molecule==2.19.0
 monotonic==1.5
 more-itertools==5.0.0
+msgpack==0.6.1
+netaddr==0.7.19
+netifaces==0.10.9
+os-diskconfig-python-novaclient-ext==0.1.3
+os-networksv2-python-novaclient-ext==0.26
+os-service-types==1.7.0
+os-virtual-interfacesv2-python-novaclient-ext==0.20
+oslo.config==6.9.0
+oslo.i18n==3.23.1
+oslo.serialization==2.29.0
+oslo.utils==3.41.0
 paramiko==2.4.2
 parso==0.3.1
 pathlib2==2.3.3
 pathspec==0.5.9
-pbr==4.1.0
+pbr==1.10.0
 pexpect==4.6.0
 pluggy==0.8.0
 poyo==0.4.2
@@ -82,15 +101,25 @@ pycodestyle==2.3.1
 pycparser==2.19
 pydocstyle==3.0.0
 pyflakes==1.6.0
-pylint==1.9.3
 PyNaCl==1.3.0
+pyparsing==2.4.0
+pyrax==1.9.8
 pytest==4.3.1
 python-dateutil==2.7.5
 python-gilt==1.2.1
-python-jsonrpc-server==0.0.2
+python-jsonrpc-server==0.1.2
+python-keystoneclient==3.19.0
+python-language-server==0.26.1
+python-novaclient==2.27.0
+pytz==2019.1
 PyYAML==3.13
+rackspace-auth-openstack==1.3
+rackspace-novaclient==2.1
+rax-default-network-flags-python-novaclient-ext==0.4.0
+rax-scheduled-images-python-novaclient-ext==0.3.1
 readchar==2.0.1
 requests==2.18.4
+rfc3986==1.3.2
 rope==0.12.0
 rsa==3.4.2
 ruamel.ordereddict==0.4.13
@@ -99,11 +128,13 @@ s3transfer==0.1.13
 scandir==1.9.0
 schematics==2.0.1
 sh==1.12.14
+simplejson==3.16.0
 singledispatch==3.4.0.3
 six==1.11.0
 smmap2==2.0.5
 snowballstemmer==1.2.1
 stacker==1.5.0
+stevedore==1.30.1
 tabulate==0.8.2
 testinfra==1.16.0
 tree-format==0.1.2
