--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -1,6 +1,8 @@
 tap "beeftornado/rmtree"
 tap "buo/cask-upgrade"
 tap "clintmod/formulas"
+tap "derailed/k9s"
+tap "derailed/popeye"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-drivers"
@@ -8,6 +10,7 @@ tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
+tap "instrumenta/instrumenta"
 tap "jakehilborn/jakehilborn"
 tap "mas-cli/tap"
 cask "adoptopenjdk"
@@ -27,7 +30,6 @@ brew "ccat"
 brew "coreutils"
 brew "curl"
 brew "dpkg"
-brew "ffmpeg"
 brew "fzf"
 brew "git"
 brew "git-lfs"
@@ -36,18 +38,21 @@ brew "go"
 brew "gptfdisk"
 brew "grep"
 brew "hadolint"
+brew "helm"
+brew "helm-docs"
 brew "htop"
-brew "ical-buddy"
 brew "jq"
 brew "kubernetes-cli"
-brew "kubernetes-helm"
+brew "kubectx"
 brew "mackup"
 brew "mysql-client"
 brew "nano"
 brew "ncdu"
 brew "newt"
+brew "nmap"
 brew "node"
 brew "nvm"
+brew "octant"
 brew "openssh"
 brew "ossp-uuid"
 brew "packer"
@@ -55,8 +60,12 @@ brew "pandoc"
 brew "pwgen"
 brew "python@2"
 brew "rack"
+brew "redis"
+brew "ripgrep"
 brew "shellcheck"
+brew "sonar-scanner"
 brew "sshfs"
+brew "sshpass"
 brew "telnet"
 brew "terraform"
 brew "tig"
@@ -71,9 +80,11 @@ brew "youtube-dl"
 brew "zsh"
 brew "beeftornado/rmtree/brew-rmtree"
 brew "clintmod/formulas/macprefs"
+brew "derailed/k9s/k9s"
+brew "derailed/popeye/popeye"
+brew "instrumenta/instrumenta/kubeval"
 brew "jakehilborn/jakehilborn/displayplacer"
 brew "mas-cli/tap/mas"
-cask "aerial"
 cask "android-platform-tools"
 cask "atom"
 cask "balenaetcher"
@@ -95,21 +106,24 @@ cask "insomnia"
 cask "iterm2"
 cask "jdownloader"
 cask "joplin"
+cask "keepassxc"
 cask "keka"
 cask "kekadefaultapp"
+cask "keybase"
 cask "kitematic"
 cask "little-snitch"
+cask "logitech-gaming-software"
 cask "microsoft-remote-desktop-beta"
 cask "minikube"
 cask "mongodb-compass-community"
 cask "nextcloud"
 cask "ngrok"
-cask "nomachine"
 cask "prusaslicer"
 cask "qbittorrent"
 cask "slack"
 cask "sonos"
 cask "sourcetree"
+cask "steam"
 cask "thunderbird"
 cask "vagrant"
 cask "virtualbox"
