--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -12,6 +12,7 @@ tap "homebrew/core"
 tap "homebrew/services"
 tap "instrumenta/instrumenta"
 tap "jakehilborn/jakehilborn"
+tap "kube-score/tap"
 tap "mas-cli/tap"
 cask "adoptopenjdk"
 cask "osxfuse"
@@ -25,6 +26,7 @@ brew "bfg"
 brew "brightness"
 brew "buildkit"
 brew "gdbm"
+brew "gettext", link: true
 brew "python"
 brew "ccat"
 brew "coreutils"
@@ -68,6 +70,7 @@ brew "sshfs"
 brew "sshpass"
 brew "telnet"
 brew "terraform"
+brew "tflint"
 brew "tig"
 brew "tldr"
 brew "transcrypt"
@@ -76,6 +79,7 @@ brew "vault"
 brew "vim"
 brew "watch"
 brew "wget"
+brew "yarn"
 brew "youtube-dl"
 brew "zsh"
 brew "beeftornado/rmtree/brew-rmtree"
@@ -84,7 +88,9 @@ brew "derailed/k9s/k9s"
 brew "derailed/popeye/popeye"
 brew "instrumenta/instrumenta/kubeval"
 brew "jakehilborn/jakehilborn/displayplacer"
+brew "kube-score/tap/kube-score"
 brew "mas-cli/tap/mas"
+cask "android-file-transfer"
 cask "android-platform-tools"
 cask "atom"
 cask "balenaetcher"
@@ -102,6 +108,7 @@ cask "google-cloud-sdk"
 cask "iina"
 cask "imageoptim"
 cask "insomnia"
+cask "intellij-idea"
 cask "iterm2"
 cask "jdownloader"
 cask "joplin"
@@ -117,15 +124,18 @@ cask "minikube"
 cask "mongodb-compass-community"
 cask "nextcloud"
 cask "ngrok"
+cask "notion"
 cask "prusaslicer"
 cask "qbittorrent"
 cask "slack"
 cask "sonos"
 cask "sourcetree"
 cask "steam"
+cask "telegram"
 cask "thunderbird"
 cask "vagrant"
 cask "virtualbox"
+cask "visual-studio-code"
 cask "vnc-viewer"
 cask "xquartz"
 mas "HyperDock", id: 449830122
