--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -48060,9 +48060,9 @@
 	<key>NSFontPanelAttributes</key>
 	<string>1, 0</string>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Pictures/rips/reddit_sub_twicemedia</string>
+	<string>~/Downloads</string>
 	<key>NSNavPanelExpandedSizeForOpenMode</key>
-	<string>{712, 448}</string>
+	<string>{799, 448}</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
@@ -48128,6 +48128,8 @@
 	<string>0 166 224 275 0 0 1680 1027 </string>
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>927 203 445 132 0 0 1680 1027 </string>
+	<key>NSWindow Frame NSNavPanelAutosaveName</key>
+	<string>3761 1488 799 448 3440 -623 1440 2560 </string>
 	<key>NSWindow Frame ProfilesPanel</key>
 	<string>275 597 735 382 0 0 1680 1027 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
@@ -48139,7 +48141,7 @@
 	<key>NSWindow Frame UKCrashReporter</key>
 	<string>127 443 592 584 0 0 1680 1027 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>840 56 839 971 0 0 1680 1027 </string>
+	<string>0 56 1433 971 0 0 1680 1027 </string>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -48304,8 +48306,6 @@
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
-			<key>Background Image Location</key>
-			<string>/Users/calvin/Pictures/rips/reddit_sub_twicemedia/csu9ns-Twice_in_Hawaii-5yxylu1b2kh31.png</string>
 			<key>Background Image Mode</key>
 			<integer>3</integer>
 			<key>Badge Color</key>
@@ -48910,6 +48910,7 @@
 		<string>3.3.1</string>
 		<string>3.3.3</string>
 		<string>3.3.5</string>
+		<string>3.3.7</string>
 		<string>3.2.9</string>
 		<string>3.3.2</string>
 		<string>3.3.4</string>
@@ -48926,7 +48927,7 @@
 		<key>screenFrame</key>
 		<string>{{0, 0}, {3440, 1440}}</string>
 		<key>topLeft</key>
-		<string>{1230, 953}</string>
+		<string>{1230, 954}</string>
 	</dict>
 	<key>NoSyncHaveRequestedFullDiskAccess</key>
 	<true/>
@@ -48937,7 +48938,7 @@
 	<key>NoSyncLastTipTime</key>
 	<real>570564150.27806103</real>
 	<key>NoSyncLaunchExperienceControllerRunCount</key>
-	<integer>41</integer>
+	<integer>53</integer>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
 	<true/>
 	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
@@ -49653,16 +49654,16 @@
 	</array>
 	<key>NoSyncSearchHistory2</key>
 	<array>
-		<string>daemonset</string>
-		<string>tier</string>
-		<string>subnet</string>
-		<string>audit</string>
-		<string>aurora postgres</string>
-		<string>location-api</string>
-		<string>lets</string>
-		<string>-stg</string>
-		<string>stag</string>
-		<string>letsencrypt</string>
+		<string>167.89.103.104</string>
+		<string>subusers</string>
+		<string>reputation of 15</string>
+		<string>of 15</string>
+		<string>calvinbui-01</string>
+		<string>tags</string>
+		<string>logs</string>
+		<string>libcurl</string>
+		<string>frozen</string>
+		<string>ap3-components-ui@https://github.com/autopilot3  ap3-components-ui#trigger-ui-projs</string>
 	</array>
 	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
 	<real>564322412.38501406</real>
@@ -49798,7 +49799,7 @@
 	<key>findMode_iTerm</key>
 	<integer>0</integer>
 	<key>iTerm Version</key>
-	<string>3.3.6</string>
+	<string>3.3.7</string>
 	<key>kCPFavoritesUserDefaultsKey</key>
 	<array>
 		<data>
