--- a/.gitmodules
+++ b/.gitmodules
@@ -47,3 +47,4 @@
 [submodule "vim/bundle/coc.nvim"]
 	path = vim/bundle/coc.nvim
 	url = https://github.com/neoclide/coc.nvim.git
+	branch = release
