--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -14,6 +14,7 @@ tap "instrumenta/instrumenta"
 tap "jakehilborn/jakehilborn"
 tap "kube-score/tap"
 tap "mas-cli/tap"
+tap "weaveworks/tap"
 cask "osxfuse"
 brew "ansible-cmdb"
 brew "gdbm"
@@ -38,16 +39,20 @@ brew "fzf"
 brew "git"
 brew "git-lfs"
 brew "gnu-sed"
+brew "gnupg"
 brew "go"
 brew "gptfdisk"
+brew "graphviz"
 brew "grep"
 brew "hadolint"
 brew "helm"
 brew "helm-docs"
 brew "htop"
+brew "john-jumbo"
 brew "jq"
 brew "kubernetes-cli"
 brew "kubectx"
+brew "kubeseal"
 brew "kustomize"
 brew "mackup"
 brew "mysql-client"
@@ -61,6 +66,7 @@ brew "nvm"
 brew "octant"
 brew "openssh"
 brew "ossp-uuid"
+brew "p7zip"
 brew "packer"
 brew "pandoc"
 brew "pwgen"
@@ -77,6 +83,7 @@ brew "terraform"
 brew "tflint"
 brew "tig"
 brew "tldr"
+brew "tmux"
 brew "transcrypt"
 brew "tree"
 brew "vault"
@@ -95,12 +102,14 @@ brew "instrumenta/instrumenta/kubeval"
 brew "jakehilborn/jakehilborn/displayplacer"
 brew "kube-score/tap/kube-score"
 brew "mas-cli/tap/mas"
+brew "weaveworks/tap/eksctl"
 cask "adoptopenjdk"
 cask "android-file-transfer"
 cask "android-platform-tools"
 cask "atom"
 cask "bettertouchtool"
 cask "bitwarden"
+cask "calibre"
 cask "cd-to-iterm"
 cask "displaycal"
 cask "docker"
@@ -109,6 +118,7 @@ cask "firefox"
 cask "font-hack-nerd-font"
 cask "google-chrome"
 cask "google-cloud-sdk"
+cask "gpg-suite"
 cask "iina"
 cask "imageoptim"
 cask "insomnia"
@@ -136,6 +146,7 @@ cask "sourcetree"
 cask "steam"
 cask "telegram"
 cask "thunderbird"
+cask "typora"
 cask "vagrant"
 cask "visual-studio-code"
 cask "vnc-viewer"
