--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -15,6 +15,7 @@ tap "jakehilborn/jakehilborn"
 tap "kube-score/tap"
 tap "mas-cli/tap"
 tap "weaveworks/tap"
+cask "adoptopenjdk8"
 cask "osxfuse"
 brew "ansible-cmdb"
 brew "gdbm"
@@ -27,19 +28,19 @@ brew "bash"
 brew "bfg"
 brew "brightness"
 brew "buildkit"
-brew "gettext", link: true
-brew "python"
+brew "gettext"
 brew "ccat"
 brew "coreutils"
 brew "curl"
 brew "dpkg"
+brew "python"
 brew "ffmpeg"
 brew "findutils"
 brew "fzf"
 brew "git"
 brew "git-lfs"
 brew "gnu-sed"
-brew "gnupg"
+brew "gnupg", link: false
 brew "go"
 brew "gptfdisk"
 brew "graphviz"
@@ -50,11 +51,13 @@ brew "helm-docs"
 brew "htop"
 brew "john-jumbo"
 brew "jq"
+brew "jsonnet"
 brew "kubernetes-cli"
 brew "kubectx"
 brew "kubeseal"
 brew "kustomize"
 brew "mackup"
+brew "maven"
 brew "mysql-client"
 brew "nano"
 brew "ncdu"
@@ -70,7 +73,7 @@ brew "p7zip"
 brew "packer"
 brew "pandoc"
 brew "pwgen"
-brew "python@2", link: false
+brew "python@2"
 brew "rack"
 brew "redis"
 brew "ripgrep"
@@ -78,6 +81,7 @@ brew "shellcheck"
 brew "sonar-scanner"
 brew "sshfs"
 brew "sshpass"
+brew "stunnel"
 brew "telnet"
 brew "terraform"
 brew "tflint"
@@ -86,6 +90,7 @@ brew "tldr"
 brew "tmux"
 brew "transcrypt"
 brew "tree"
+brew "unrar"
 brew "vault"
 brew "velero"
 brew "vim"
@@ -103,14 +108,15 @@ brew "jakehilborn/jakehilborn/displayplacer"
 brew "kube-score/tap/kube-score"
 brew "mas-cli/tap/mas"
 brew "weaveworks/tap/eksctl"
-cask "adoptopenjdk"
 cask "android-file-transfer"
 cask "android-platform-tools"
 cask "atom"
+cask "balenaetcher"
 cask "bettertouchtool"
 cask "bitwarden"
 cask "calibre"
 cask "cd-to-iterm"
+cask "discord"
 cask "displaycal"
 cask "docker"
 cask "eloston-chromium"
@@ -151,6 +157,7 @@ cask "vagrant"
 cask "visual-studio-code"
 cask "vnc-viewer"
 cask "xquartz"
+cask "zoomus"
 mas "HyperDock", id: 449830122
 mas "Pages", id: 409201541
 mas "Paste", id: 967805235
