--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -10,9 +10,7 @@ tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/core"
 tap "homebrew/services"
-tap "instrumenta/instrumenta"
 tap "jakehilborn/jakehilborn"
-tap "kube-score/tap"
 tap "mas-cli/tap"
 tap "weaveworks/tap"
 cask "adoptopenjdk8"
@@ -21,6 +19,7 @@ brew "ansible-cmdb"
 brew "gdbm"
 brew "ansible-lint"
 brew "argyll-cms"
+brew "asciinema"
 brew "autojump"
 brew "awk"
 brew "aws-iam-authenticator"
@@ -33,13 +32,14 @@ brew "ccat"
 brew "coreutils"
 brew "curl"
 brew "dpkg"
-brew "python"
 brew "ffmpeg"
 brew "findutils"
 brew "fzf"
 brew "git"
 brew "git-lfs"
 brew "gnu-sed"
+brew "libgcrypt"
+brew "libksba"
 brew "gnupg", link: false
 brew "go"
 brew "gptfdisk"
@@ -48,10 +48,11 @@ brew "grep"
 brew "hadolint"
 brew "helm"
 brew "helm-docs"
+brew "hey"
 brew "htop"
+brew "imagemagick"
 brew "john-jumbo"
 brew "jq"
-brew "jsonnet"
 brew "kubernetes-cli"
 brew "kubectx"
 brew "kubeseal"
@@ -72,12 +73,15 @@ brew "ossp-uuid"
 brew "p7zip"
 brew "packer"
 brew "pandoc"
+brew "prometheus"
 brew "pwgen"
 brew "python@2"
 brew "rack"
 brew "redis"
 brew "ripgrep"
+brew "rsync"
 brew "shellcheck"
+brew "socat"
 brew "sonar-scanner"
 brew "sshfs"
 brew "sshpass"
@@ -91,24 +95,20 @@ brew "tmux"
 brew "transcrypt"
 brew "tree"
 brew "unrar"
-brew "vault"
 brew "velero"
 brew "vim"
 brew "watch"
 brew "wget"
 brew "yarn"
 brew "youtube-dl"
+brew "yq"
 brew "zsh"
 brew "beeftornado/rmtree/brew-rmtree"
 brew "clintmod/formulas/macprefs"
 brew "derailed/k9s/k9s"
 brew "derailed/popeye/popeye"
-brew "instrumenta/instrumenta/kubeval"
 brew "jakehilborn/jakehilborn/displayplacer"
-brew "kube-score/tap/kube-score"
 brew "mas-cli/tap/mas"
-brew "weaveworks/tap/eksctl"
-cask "android-file-transfer"
 cask "android-platform-tools"
 cask "atom"
 cask "balenaetcher"
@@ -142,13 +142,14 @@ cask "mattermost"
 cask "microsoft-remote-desktop-beta"
 cask "minikube"
 cask "mongodb-compass-community"
+cask "mullvadvpn"
 cask "ngrok"
 cask "notion"
 cask "prusaslicer"
 cask "qbittorrent"
 cask "slack"
 cask "sonos"
-cask "sourcetree"
+cask "sony-ps4-remote-play"
 cask "steam"
 cask "telegram"
 cask "thunderbird"
