--- a/mac/Brewfile
+++ b/mac/Brewfile
@@ -3,6 +3,7 @@ tap "buo/cask-upgrade"
 tap "clintmod/formulas"
 tap "derailed/k9s"
 tap "derailed/popeye"
+tap "golangci/tap"
 tap "homebrew/bundle"
 tap "homebrew/cask"
 tap "homebrew/cask-drivers"
@@ -12,44 +13,57 @@ tap "homebrew/core"
 tap "homebrew/services"
 tap "jakehilborn/jakehilborn"
 tap "mas-cli/tap"
+tap "sonatype-nexus-community/nancy-tap"
 tap "weaveworks/tap"
 cask "adoptopenjdk8"
 cask "osxfuse"
 brew "ansible-cmdb"
 brew "gdbm"
+brew "xz"
+brew "python@3.8"
 brew "ansible-lint"
 brew "argyll-cms"
 brew "asciinema"
 brew "autojump"
 brew "awk"
 brew "aws-iam-authenticator"
+brew "awscli"
 brew "bash"
+brew "openjdk"
 brew "bfg"
 brew "brightness"
 brew "buildkit"
 brew "gettext"
+brew "glib"
 brew "ccat"
+brew "cloc"
 brew "coreutils"
 brew "curl"
+brew "po4a"
 brew "dpkg"
+brew "harfbuzz"
 brew "ffmpeg"
+brew "filebeat"
 brew "findutils"
 brew "fzf"
+brew "gh"
 brew "git"
 brew "git-lfs"
 brew "gnu-sed"
+brew "gnu-time"
 brew "libgcrypt"
 brew "libksba"
-brew "gnupg", link: false
+brew "gnupg"
 brew "go"
 brew "gptfdisk"
+brew "pango"
 brew "graphviz"
 brew "grep"
 brew "hadolint"
 brew "helm"
-brew "helm-docs"
 brew "hey"
 brew "htop"
+brew "iam-policy-json-to-terraform"
 brew "imagemagick"
 brew "john-jumbo"
 brew "jq"
@@ -57,6 +71,8 @@ brew "kubernetes-cli"
 brew "kubectx"
 brew "kubeseal"
 brew "kustomize"
+brew "lzip"
+brew "lzop"
 brew "mackup"
 brew "maven"
 brew "mysql-client"
@@ -73,9 +89,12 @@ brew "ossp-uuid"
 brew "p7zip"
 brew "packer"
 brew "pandoc"
+brew "pbzip2"
+brew "pigz"
+brew "plzip"
 brew "prometheus"
+brew "putty"
 brew "pwgen"
-brew "python@2"
 brew "rack"
 brew "redis"
 brew "ripgrep"
@@ -84,7 +103,6 @@ brew "shellcheck"
 brew "socat"
 brew "sonar-scanner"
 brew "sshfs"
-brew "sshpass"
 brew "stunnel"
 brew "telnet"
 brew "terraform"
@@ -107,8 +125,10 @@ brew "beeftornado/rmtree/brew-rmtree"
 brew "clintmod/formulas/macprefs"
 brew "derailed/k9s/k9s"
 brew "derailed/popeye/popeye"
+brew "golangci/tap/golangci-lint"
 brew "jakehilborn/jakehilborn/displayplacer"
 brew "mas-cli/tap/mas"
+brew "sonatype-nexus-community/nancy-tap/nancy"
 cask "android-platform-tools"
 cask "atom"
 cask "balenaetcher"
@@ -131,30 +151,26 @@ cask "insomnia"
 cask "iterm2"
 cask "jdownloader"
 cask "joplin"
-cask "keepassxc"
 cask "keka"
 cask "kekadefaultapp"
 cask "keybase"
-cask "kitematic"
 cask "little-snitch"
+cask "logitech-camera-settings"
+cask "logitech-firmwareupdatetool"
 cask "logitech-gaming-software"
+cask "logitech-options"
+cask "logitech-unifying"
 cask "mattermost"
 cask "microsoft-remote-desktop-beta"
-cask "minikube"
-cask "mongodb-compass-community"
-cask "mullvadvpn"
+cask "mongodb-compass"
 cask "ngrok"
 cask "notion"
 cask "prusaslicer"
 cask "qbittorrent"
 cask "slack"
-cask "sonos"
-cask "sony-ps4-remote-play"
 cask "steam"
 cask "telegram"
 cask "thunderbird"
-cask "typora"
-cask "vagrant"
 cask "visual-studio-code"
 cask "vnc-viewer"
 cask "xquartz"
